[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Inventory/ItemDescriptionModule/ItemDescriptionFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://shared/fonts/OpenSans_NormalText.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Inventory/ItemDropDialog/ItemDropDialog.gd" type="Script" id=3]
[ext_resource path="res://shared/bestia_theme.tres" type="Theme" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/item_placeholder.png-974a6931d6c21f9f2db38078578e221c.stex"

[node name="ItemDropModal" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -81.0
margin_right = 132.0
margin_bottom = 81.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 254.0
margin_bottom = 152.0

[node name="HBoxHeader" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_right = 244.0
margin_bottom = 40.0
custom_constants/separation = 20
alignment = 1

[node name="ItemImg" type="TextureRect" parent="MarginContainer/VBox/HBoxHeader"]
margin_left = 31.0
margin_right = 71.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture = SubResource( 1 )
stretch_mode = 4

[node name="ItemName" type="Label" parent="MarginContainer/VBox/HBoxHeader"]
margin_left = 91.0
margin_top = 1.0
margin_right = 213.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Item Name"

[node name="InputMargin" type="MarginContainer" parent="MarginContainer/VBox"]
margin_top = 44.0
margin_right = 244.0
margin_bottom = 92.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBox/InputMargin"]
margin_top = 10.0
margin_right = 244.0
margin_bottom = 38.0

[node name="HBoxInput" type="HBoxContainer" parent="MarginContainer/VBox/InputMargin/CenterContainer"]
margin_left = 60.0
margin_right = 184.0
margin_bottom = 28.0

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBox/InputMargin/CenterContainer/HBoxInput"]
margin_right = 70.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
min_value = 1.0
value = 1.0
align = 1

[node name="AllButton" type="Button" parent="MarginContainer/VBox/InputMargin/CenterContainer/HBoxInput"]
margin_left = 74.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 0 )
text = "All"

[node name="HBoxButtons" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 96.0
margin_right = 244.0
margin_bottom = 136.0
custom_constants/separation = 10
alignment = 1

[node name="Ok" type="Button" parent="MarginContainer/VBox/HBoxButtons"]
margin_left = 17.0
margin_right = 117.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Drop"

[node name="Cancel" type="Button" parent="MarginContainer/VBox/HBoxButtons"]
margin_left = 127.0
margin_right = 227.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Cancel"
[connection signal="popup_hide" from="." to="." method="_on_ItemDropModal_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBox/InputMargin/CenterContainer/HBoxInput/AllButton" to="." method="_on_AllButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBoxButtons/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBoxButtons/Cancel" to="." method="_on_Cancel_pressed"]
